A syzygy specific option
Signed-off-by: Ian Allison <iana@pims.math.ca>

--- a/index.ipynb
+++ b/index.ipynb
@@ -6,6 +6,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip install --user ipypm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from ipypm import ipypm"
    ]
   },
