Add upgrade flag
Signed-off-by: Ian Allison <iana@pims.math.ca>

--- a/index.ipynb
+++ b/index.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install --user ipypm"
+    "!pip install --user --upgrade ipypm"
    ]
   },
   {
