Add a tiny bit of documentation
Signed-off-by: Ian Allison <iana@pims.math.ca>

--- a/index.ipynb
+++ b/index.ipynb
@@ -10,6 +10,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PyPM.ca Example\n",
+    "\n",
+    "This notebook will help you install and use Dean Karlan's [PyPM.ca](https://github.com/pypm/pypmca) package for population modelling. The first cell (above) will perform a local installation of the package to your home directory."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
