--- a/index.ipynb
+++ b/index.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "# PyPM.ca Example\n",
     "\n",
-    "This notebook will help you install and use Dean Karlan's [PyPM.ca](https://github.com/pypm/pypmca) package for population modelling. The first cell (above) will perform a local installation of the package to your home directory."
+    "This notebook will help you install and use Dean Karlen's [PyPM.ca](https://github.com/pypm/pypmca) package for population modelling. The first cell (above) will perform a local installation of the package to your home directory."
    ]
   },
   {
